--- a/HW5_pandas.ipynb
+++ b/HW5_pandas.ipynb
@@ -90,9 +90,9 @@
         "- ID - 每個運動員的唯一編號\n",
         "- Name - 運動員的名字\n",
         "- Sex - 男（M）或女（F）\n",
-        "- Age - 整數\n",
-        "- Height - 以厘米為單位\n",
-        "- Weight - 以千克為單位\n",
+        "- Age - 年齡（整數）\n",
+        "- Height - 身高（以厘米為單位）\n",
+        "- Weight - 體重（以千克為單位）\n",
         "- Team - 隊伍名稱\n",
         "- NOC - 國家奧林匹克委員會的3個字母代碼\n",
         "- Games - 奧運年份和賽季\n",
