--- a/HW5_pandas.ipynb
+++ b/HW5_pandas.ipynb
@@ -129,13 +129,13 @@
         "    - 列印 `First` 字串和第一次舉辦夏季奧運會的年份。\n",
         "    - 列印 `First summer sports` 字串和第一次舉辦夏季奧運會的比賽項目。\n",
         "    - 列印 `Most recent` 字串和最近一次（資料集中）舉辦夏季奧運會的年份。\n",
-        "    - 列印`Recent summer sports`最近一次舉辦夏季奧運會的比賽項目。\n",
+        "    - 列印`Recent summer sports`字串和最近一次舉辦夏季奧運會的比賽項目。\n",
         "  - 冬季奧運歷史\n",
         "    - 列印 `Winter` 字串。\n",
         "    - 列印 `First` 字串和第一次舉辦冬季奧運會的年份。\n",
         "    - 列印 `First winter sports` 字串和第一次舉辦冬季奧運會的比賽項目。\n",
         "    - 列印 `Most Recent`字串和最近一次（資料集中）舉辦冬季奧運會的年份。\n",
-        "    - 列印`Recent winter sports`最近一次舉辦冬季奧運會的比賽項目。\n",
+        "    - 列印`Recent winter sports`字串和最近一次舉辦冬季奧運會的比賽項目。\n",
         "\n",
         "\n",
         "  \n"
